--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@eva-design/eva": "^2.2.0",
     "@faker-js/faker": "^8.4.1",
     "@gorhom/bottom-sheet": "^4.6.1",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/geolocation": "^3.2.0",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/messaging": "^19.2.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/drawer": "^6.6.15",
@@ -49,6 +52,8 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-reanimated": "^3.8.0",
     "react-native-rename": "^3.2.14",
@@ -66,6 +71,7 @@
     "react-native-webview": "^13.8.1",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
+    "uri-scheme": "^1.2.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
