--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         buildToolsVersion = "34.0.0"
         minSdkVersion = 21
         compileSdkVersion = 34
-        targetSdkVersion = 34
+        targetSdkVersion = 30
         ndkVersion = "25.1.8937393"
         kotlinVersion = "1.8.0"
     }
@@ -12,8 +12,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-                classpath 'com.google.gms:google-services:4.3.15'
-
+                classpath('com.google.gms:google-services:4.3.3')
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
