--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-native-clipboard/clipboard": "^1.14.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/geolocation": "^3.2.0",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/dynamic-links": "^19.2.2",
     "@react-native-firebase/messaging": "^19.2.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
@@ -50,6 +52,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-intro": "^0.0.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-notification-sounds": "^0.5.8",
     "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.5",
@@ -64,6 +67,7 @@
     "react-native-shared-element": "^0.8.9",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^15.1.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
@@ -72,7 +76,8 @@
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
     "uri-scheme": "^1.2.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -83,6 +88,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
